tests/good/16_continue_2.ris
void main():
    let int i = 0;
    while (i < 10):
        i++;
        if (i < 5):
            continue;
        endif;
        println i;
    endwhile;
    return;